# analitica-docu

clave_pem/: Guía Airflow 3.2.0 desde Cero.md  KP-instancia-NAT.pem  KP-master.pem  KP-workers.pem  srv-master-key.pem
docker/clave-pem/: GENERAL-KEY.pem
guia-creacion-cluster/clave-pem/: key-master.pem  key-workers.pem
guia-creacion-cluster/configuracion-cluster/: 01-uv-airflow-rabbitMQ-installations.md  02-servicios-segundo-plano.md  03-configuracion-workers.md  04-gestion-dags-y-datos.md
power-bi/: part_1.pbix  part_2.pbix  part_3_visualizaciones.pbix  part_4_interacciones_filtros.pbix  part_5_formato_visualizaciones.pbix  part_6_formato_reporte.pbix  part_7_botones_marcadores.pbix  part_8_publicacion_PowerBi_service.pbix
pre-prueba/: .env.example  .gitignore  README.md  prueba_desempeño_jr_retailco.md  pyproject.toml  queries.sql  schema.sql  schema_dw.sql
pre-prueba/docs/: dashboard_docs.md  eda_reporte.md  graficos_docs.md  modelado_docs.md  pipeline_docs.md  storytelling_docs.md
pre-prueba/scripts/: 01_python_puro.py  02_eda.py  03_limpieza_carga.py  04_analisis.py  05_sql_pandas.py  ejemplo_top5.py  pipeline.py
